fix spacing, about font size

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5638,7 +5638,7 @@ header.style-3.two.sticky .right-sidebar-button svg path {
 .home1-about-section .about-content ul li h5 {
   color: var(--title-color);
   font-family: var(--font-kanit);
-  font-size: 22px;
+  font-size: 24px;
   font-weight: 500;
   line-height: 1.3;
   letter-spacing: 0.06em;
@@ -5647,7 +5647,7 @@ header.style-3.two.sticky .right-sidebar-button svg path {
 .home1-about-section .about-content ul li p {
   color: var(--paragraph-color);
   font-family: var(--font-inter);
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.8;
   margin-bottom: 0;
